# socnet

./: .env  .env.example  .gitignore  Dockerfile  Dockerfile.dev  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: heroku.yml
app/: main.py
app/api/routes/: api.py
app/api/routes/v1/: api.py
app/core/: config.py  events.py
app/db/: database.py  events.py
app/db/migrations/: env.py
app/db/repositories/: base.py
scripts/: entrypoint.dev.sh  entrypoint.sh
