[tool.poetry]
name = "socnet"
version = "0.1.0"
description = "Socnet API"
authors = ["AlexandrChikur <sasha.chikur@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.63.0"
uvicorn = "^0.13.3"
pydantic = {extras = ["dotenv"], version = "^1.7.3"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
